home data and search

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,23 +4,29 @@ description: Irecharge mobile team assessment
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
 dependencies:
   flutter:
     sdk: flutter
 
-
+  dartz: ^0.10.1
+  flutter_bloc: ^8.1.5
+  bloc: ^8.1.4
   cupertino_icons: ^1.0.2
+  flutter_secure_storage: ^9.2.2
+  freezed_annotation: ^2.4.1
   google_fonts:
+  gap: ^3.0.1
   json_annotation: ^4.8.1
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  freezed: ^2.5.2
   flutter_lints: ^2.0.0
   json_serializable:
-  build_runner:
+  build_runner: ^2.4.9
 
 #flutter_icons:
 #  ios: true
@@ -29,8 +35,23 @@ dev_dependencies:
 #  image_path_android: 'assets/images/logo_transparent.png'
 
 flutter:
-
   uses-material-design: true
 
   # assets:
   #   - assets/responses/
+
+fonts:
+  - family: Roboto
+    fonts:
+      - asset: assets/fonts/Roboto/Roboto-Black.ttf
+      - asset: assets/fonts/Roboto/Roboto-BlackItalic.ttf
+      - asset: assets/fonts/Roboto/Roboto-Bold.ttf
+      - asset: assets/fonts/Roboto/Roboto-BoldItalic.ttf
+      - asset: assets/fonts/Roboto/Roboto-Italic.ttf
+      - asset: assets/fonts/Roboto/Roboto-LightItalic.ttf
+      - asset: assets/fonts/Roboto/Roboto-Light.ttf
+      - asset: assets/fonts/Roboto/Roboto-Medium.ttf
+      - asset: assets/fonts/Roboto/Roboto-MediumItalic.ttf
+      - asset: assets/fonts/Roboto/Roboto-Regular.ttf
+      - asset: assets/fonts/Roboto/Roboto-Thin.ttf
+      - asset: assets/fonts/Roboto/Roboto-ThinItalic.ttf
